# SafePaw

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SETUP.md  SKILL.md  docker-compose.yml  foundry.toml  install.sh  package.json  pnpm-lock.yaml  start.sh  stop.sh
.github/workflows/: build-release.yml  pr-test.yml  tagging.yml
cli/: safeclaw.sh
contracts/: AgentLog.sol
scripts/: safeclaw.sh
scripts/vm-init/picoclaw/: install-picoclaw.sh  onboard-picoclaw.sh
sdk/python/: README.md  setup.py
sdk/python/safeclaw/: __init__.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: index.ts
solidity-tests/: AgentLog.t.sol
src/: agent.rs  api.ts  chain.ts  cli.rs  db.rs  index.ts  lib.rs  main.rs  server.rs  util.rs  verify.ts  vm.rs
tests/: agent_lifecycle.rs  agent_server.rs  cli_help.rs  cli_vm_commands.rs  cli_vm_mode.rs  embedded_assets.rs  local_vm_api_state.rs  multipass_adapter.rs  server_integration.rs  vm_exec_transfer.rs  vm_lifecycle.rs
tests/common/: mod.rs
ui/: app.js  audioManager.js  index.html  pixi.min@v8.16.0.js  pixi@v8.16.0.js  state.js  village.js
