[package]
name = "safepaw"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "safepaw"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
rust-embed = "8.5"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = "4.5.60"
hex = "0.4"
logging = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.20"
tower = { version = "0.5", features = ["util"] }
